SERVER-94315: Ensure shard filtering is applied for non-simple collation find on sharded collection [8.0] (#29747)

GitOrigin-RevId: 4d7886cbcae99cfaa3ddccf91d70a04fadff3b99